# libperceptronmkl

./: .gitignore  CMakeLists.txt
include/: featuretransform.h
include/epblas/: epblas.h  eputil.h  mkl_memman.h
src/: eputil.c  featuretransform.c  kernelperceptronmkl.c  perceptronmkl.c  simpleperceptronmkl.c
src/epblas/: epblas_mkl.c  mkl_memman.c
tests/: t2.c  t3.c  tMatrixVectorProductDimMismatch.c  tMatrixVectorProductwithTranspose.c  tRectangularMatrixMatrixProduct.c  tRectangularMatrixMatrixProductTranspose.c  tRectangularMatrixMatrixProductTransposeWithSizingError.c  tSquareMatrixMatrixProduct.c  tdotprod.c  test.c  testsuit1.c  tmatrixvectorprod.c  tvappend.c
